--- a/spec/fixtures/imports.yml
+++ b/spec/fixtures/imports.yml
@@ -152,3 +152,12 @@ imports_017:
   updated_at: '2014-11-11 07:38:51.378192'
   num_imported: '0'
   mapping_id: '49'
+imports_018:
+  id: '52'
+  odk_formid: Events_Boats_Cars
+  last_uuid: 
+  cursor: <cursor xmlns="http://www.opendatakit.org/cursor"><attributeName>_LAST_UPDATE_DATE</attributeName><attributeValue>2014-11-11T19:55:45.484+0000</attributeValue><uriLastReturnedValue>uuid:b85cb063-ce6e-489b-ad4e-553bb1fe2f45</uriLastReturnedValue><isForwardCursor>true</isForwardCursor></cursor>
+  created_at: '2014-11-13 09:35:15.372427'
+  updated_at: '2014-11-13 09:44:16.310988'
+  num_imported: '0'
+  mapping_id: '61'
