--- a/spec/fixtures/mappings.yml
+++ b/spec/fixtures/mappings.yml
@@ -7,3 +7,11 @@ mappings_001:
   updated_at: '2014-11-18 07:39:26.000945'
   active: f
   user_id: '4'
+mappings_002:
+  id: '61'
+  name: Events
+  odk_formid: 
+  created_at: '2014-11-18 07:39:26.000945'
+  updated_at: '2014-11-18 07:39:26.000945'
+  active: f
+  user_id: '4'
