--- a/spec/fixtures/odk_field_salesforce_fields.yml
+++ b/spec/fixtures/odk_field_salesforce_fields.yml
@@ -55,3 +55,10 @@ odk_field_salesforce_fields_008:
   created_at: '2014-11-18 07:42:02.95418'
   updated_at: '2014-11-18 07:42:02.95418'
   lookup_field_name: 
+odk_field_salesforce_fields_009:
+  id: '654'
+  odk_field_id: '2380'
+  salesforce_field_id: '7739'
+  created_at: '2014-11-18 07:42:02.95418'
+  updated_at: '2014-11-18 07:42:02.95418'
+  lookup_field_name: 
