--- a/spec/fixtures/odk_fields.yml
+++ b/spec/fixtures/odk_fields.yml
@@ -16213,3 +16213,14 @@ odk_fields_1474:
   is_uuid: f
   uuidable: t
   repeat_field: f
+odk_fields_1475:
+  id: '2380'
+  field_name: "/event_photo"
+  field_type: binary
+  salesforce_field_id: 
+  created_at: '2014-11-18 07:39:31.527283'
+  updated_at: '2014-11-18 07:39:31.527283'
+  odk_form_id: '61'
+  is_uuid: f
+  uuidable: f
+  repeat_field: f
