--- a/spec/fixtures/salesforce_fields.yml
+++ b/spec/fixtures/salesforce_fields.yml
@@ -559,3 +559,17 @@ salesforce_fields_040:
   lookup_object: 
   lookup_field: 
   salesforce_object_id: '243'
+salesforce_fields_041:
+  id: '7739'
+  mapping_id: 
+  object_name: 
+  field_name: Photo
+  created_at: '2014-11-18 07:40:02.58421'
+  updated_at: '2014-11-18 07:40:02.58421'
+  data_type: string
+  label_name: 
+  color: 
+  is_lookup: f
+  lookup_object: 
+  lookup_field: 
+  salesforce_object_id: '244'
