--- a/config/application.yml.template
+++ b/config/application.yml.template
@@ -1,3 +1,3 @@
-RAILS_RESQUE_REDIS: 'localhost:6379/0'
+REDIS_URL: 'redis://localhost:6379/0'
 PAYPAL_URI: "https://www.sandbox.paypal.com/cgi-bin/webscr"
 PAYPAL_BUTTON_ID: '3AKRYW4MMUGKL'
