--- a/spec/fixtures/odk_field_salesforce_fields.yml
+++ b/spec/fixtures/odk_field_salesforce_fields.yml
@@ -1,64 +1,85 @@
 ---
 odk_field_salesforce_fields_001:
-  id: '645'
-  odk_field_id: '2379'
-  salesforce_field_id: '7713'
-  created_at: '2014-11-18 07:40:09.887086'
-  updated_at: '2014-11-18 07:40:09.887086'
-  lookup_field_name: 
+  id: '658'
+  odk_field_id: '2563'
+  salesforce_field_id: '7994'
+  created_at: '2015-01-20 12:22:13.746733'
+  updated_at: '2015-01-20 12:22:19.9066'
+  lookup_field_name: vera__house_ID__c
 odk_field_salesforce_fields_002:
-  id: '647'
-  odk_field_id: '2376'
-  salesforce_field_id: '7711'
-  created_at: '2014-11-18 07:40:25.976933'
-  updated_at: '2014-11-18 07:40:25.976933'
+  id: '661'
+  odk_field_id: '2554'
+  salesforce_field_id: '8008'
+  created_at: '2015-01-20 12:29:13.032131'
+  updated_at: '2015-01-20 12:29:13.032131'
   lookup_field_name: 
 odk_field_salesforce_fields_003:
-  id: '648'
-  odk_field_id: '2377'
-  salesforce_field_id: '7716'
-  created_at: '2014-11-18 07:40:57.437152'
-  updated_at: '2014-11-18 07:40:57.437152'
+  id: '662'
+  odk_field_id: '2541'
+  salesforce_field_id: '7957'
+  created_at: '2015-01-20 12:30:21.287421'
+  updated_at: '2015-01-20 12:30:21.287421'
   lookup_field_name: 
 odk_field_salesforce_fields_004:
-  id: '649'
-  odk_field_id: '2377'
-  salesforce_field_id: '7726'
-  created_at: '2014-11-18 07:41:00.845076'
-  updated_at: '2014-11-18 07:41:00.845076'
+  id: '663'
+  odk_field_id: '2542'
+  salesforce_field_id: '7983'
+  created_at: '2015-01-20 12:30:29.961374'
+  updated_at: '2015-01-20 12:30:29.961374'
   lookup_field_name: 
 odk_field_salesforce_fields_005:
-  id: '650'
-  odk_field_id: '2375'
-  salesforce_field_id: '7710'
-  created_at: '2014-11-18 07:41:18.416763'
-  updated_at: '2014-11-18 07:41:18.416763'
+  id: '664'
+  odk_field_id: '2543'
+  salesforce_field_id: '7984'
+  created_at: '2015-01-20 12:30:32.171947'
+  updated_at: '2015-01-20 12:30:32.171947'
   lookup_field_name: 
 odk_field_salesforce_fields_006:
-  id: '651'
-  odk_field_id: '2378'
-  salesforce_field_id: '7729'
-  created_at: '2014-11-18 07:41:49.972378'
-  updated_at: '2014-11-18 07:41:49.972378'
+  id: '665'
+  odk_field_id: '2574'
+  salesforce_field_id: '8013'
+  created_at: '2015-01-20 12:31:47.215236'
+  updated_at: '2015-01-20 12:31:47.215236'
   lookup_field_name: 
 odk_field_salesforce_fields_007:
-  id: '652'
-  odk_field_id: '2379'
-  salesforce_field_id: '7738'
-  created_at: '2014-11-18 07:41:57.698166'
-  updated_at: '2014-11-18 07:41:57.698166'
+  id: '666'
+  odk_field_id: '2574'
+  salesforce_field_id: '8014'
+  created_at: '2015-01-20 12:32:30.745826'
+  updated_at: '2015-01-20 12:32:30.745826'
   lookup_field_name: 
 odk_field_salesforce_fields_008:
-  id: '653'
-  odk_field_id: '2379'
-  salesforce_field_id: '7725'
-  created_at: '2014-11-18 07:42:02.95418'
-  updated_at: '2014-11-18 07:42:02.95418'
+  id: '668'
+  odk_field_id: '2548'
+  salesforce_field_id: '7976'
+  created_at: '2015-01-20 12:43:18.680968'
+  updated_at: '2015-01-20 12:43:18.680968'
   lookup_field_name: 
 odk_field_salesforce_fields_009:
-  id: '654'
-  odk_field_id: '2380'
-  salesforce_field_id: '7739'
-  created_at: '2014-11-18 07:42:02.95418'
-  updated_at: '2014-11-18 07:42:02.95418'
+  id: '669'
+  odk_field_id: '2549'
+  salesforce_field_id: '7973'
+  created_at: '2015-01-20 12:43:41.924575'
+  updated_at: '2015-01-20 12:43:41.924575'
+  lookup_field_name: 
+odk_field_salesforce_fields_010:
+  id: '670'
+  odk_field_id: '2550'
+  salesforce_field_id: '7970'
+  created_at: '2015-01-20 12:43:57.273862'
+  updated_at: '2015-01-20 12:43:57.273862'
+  lookup_field_name: 
+odk_field_salesforce_fields_011:
+  id: '887'
+  odk_field_id: '2547'
+  salesforce_field_id: '7957'
+  created_at: '2015-01-28 13:32:48.133072'
+  updated_at: '2015-01-28 13:32:48.133072'
+  lookup_field_name: 
+odk_field_salesforce_fields_012:
+  id: '892'
+  odk_field_id: '2555'
+  salesforce_field_id: '7994'
+  created_at: '2015-01-29 11:34:10.070691'
+  updated_at: '2015-01-29 11:34:10.070691'
   lookup_field_name: 
