--- a/config/application.yml.template
+++ b/config/application.yml.template
@@ -1,3 +1,5 @@
 REDIS_URL: 'redis://localhost:6379/0'
 PAYPAL_URI: "https://www.sandbox.paypal.com/cgi-bin/webscr"
 PAYPAL_BUTTON_ID: '3AKRYW4MMUGKL'
+STRIPE_PUBLISHABLE_KEY: 'pk_test_W9FR29OKTtcmeAftxYCHtEM2'
+STRIPE_SECRET_KEY: 'sk_test_d0SgFphav7N2WuFZ2tucKguV'
