--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,22 @@
 language: ruby
 rvm:
- - "1.8.7"
- - "1.9.2"
- - "1.9.3"
- - rbx
-# uncomment this line if your project needs to run something other than `rake`:
-# script: bundle exec rspec spec
+ - "2.1.5"
+
+services:
+ - redis-server
+
+addons:
+  postgresql: "9.4"
+
+install:
+# - bundle install by default
+
+before_script:
+ - cp config/application.yml.example config/application.yml
+ - cp config/database.yml.example config/database.yml
+ - psql -c 'create database travis_ci_test;' -U postgres
+ - bundle exec rake db:schema:load
+
+script: bundle exec rspec spec
+
+after_script: # nothing here yet...
